--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,11 @@ html
 /*body properties*/
 body	
 {	
-	background: url('../img/background.png') center center fixed; 
+	background: url('../img/background.jpeg') center center fixed; 
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-color:(0,0,0,0,1);
-	max-width: 60em;
+	max-width: 45em;
 	margin: 0 auto;
 }
 	@media screen and (max-width: 60em)
@@ -34,7 +34,7 @@ body
 header	
 {
 	font-size: 3em;
-	background:url('../img/companylogoBG.png') center center;	/*background image*/
+	background:url('../img/companylogoBG.jpg') center center;	/*background image*/
 	background-size: cover;
 	text-align: center;
 	color: #FFF;
@@ -67,18 +67,19 @@ nav
 	
 }
 a:active
-	{
+{
 	color: #FF00FF; 	
-	}
+}
 a:visited
-	{
+{
 	color: #FFFFFF; 
-	}
+}
 
 a:hover
 {
 	color: #0000FF;		 
 }
+
 /*navigation menu hyper links*/
 ul,a,li
 	{
@@ -115,7 +116,7 @@ ul,a,li
 /*index page flex box container*/
 .flex-container2
 {
-	height: 25em;
+	height: 36em;
 	position: relative;
 	margin: 0;
 	overflow:hidden;
@@ -126,17 +127,15 @@ ul,a,li
 {
 	width: 100%;
 	margin :0;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+	height: 100%;
+	justify-content:center;
 	
 }
 /* index page headings*/
 .heading
 {
 	background-color: #2699FB;
-	font: 4em Arial;
+	font: 3em Arial;
 	color: #FFF;
 	margin:0;
 	text-align: center;
@@ -168,7 +167,7 @@ ul,a,li
 .product-page article
 {
 background-color: #f1f1f1;
-width: 19.4em;
+width: 46em;
 margin:0.2em;
 line-height:15em;
 }
@@ -177,20 +176,17 @@ line-height:15em;
 .product-page p
 {
 	width:100%;
-	height: 28%;
-	position:relative;
+	height: 100%;
+	
 	overflow: hidden;
 }
 /* product page images*/
 .product-page img
 {
-	position:absolute;
+	
 	width:100%;
 	min-height: 100%;
-	top:50%;
-	left:50%;
-	transform:translate(-50%, -50%);
-	
+	justify-content: center;
 }
 
 fieldset > input
